- dark ui in bookmarkit dialog.
- moved corearchiver ui in desinger.
- globalfunction add a app icon get option.
- fixed getting filename at corearchiver.
- fixed zooming problem of coreimage.
- added backup option of coreapps & corebox settings and bookmark at settings.
- fixed bookmarking home folder problem at corefm.
- copy, paste shortcut at coreterminal.
- coreshot at new ui.
- added all the instruments icons.
- search ui has some changes.
- changed folder icon.
- reduced font size in all app's sidebar.
- fixed shot preview dialog ui.
- ui changes in start.
- added release note file in help app.
- saved backup file path in setting
- changed the settings toogle icon.
- moved toolsize in status bar of corepaint.
- seted all the instrument cursor in corepaint.
- adde every library version in lib README.md.
- sepearted all the ui config from constractor from every coreapps.
- fixed linenumberwidth in corepad.


Version 2.1,Released date Friday, June 1, 2018

- fixed battery pointer that caused compiling error in armv8 on dashboard app .
- fixed button ui in corescreenshot app.
- fixed extension crash for coreimage (File.File.File.png like files)
- closeable tab for corepad.
- tabengine moved to switch (for a better code functionality) and checking argument for validation
- moved to non movable page in corefm.
- changed open folder to screen shot folder.
- reload button at bottom in start.
- added support for multiple file's combined size in corefm.
- if bookmark is booked it shows a message and show the section it was booked.
- full trash support.
- notes at coreaction is saved and restored in every restart.
- Fixed Empty the trash.
- battery properties converted to stringlistmodel.
- improved openAppEngine.
- added a button to set search folder in search app.
- fixed corepad's tab related problems.
- QScreen moved to golbalfunctions.
- fixed coreaction focuseout problem.
- redesigned coreaction.
- coreaction's widget is now customizable.