@@ -1,6 +1,6 @@
 TEMPLATE = subdirs
 
 SUBDIRS += app \
-           library
+           library \
 
 app.depends = library
