@@ -171,7 +171,7 @@ color: #ffffff;
         <x>0</x>
         <y>0</y>
         <width>463</width>
-        <height>1028</height>
+        <height>978</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -400,35 +400,6 @@ QProgressBar::chunk {
     background-color: #F7A636;
     width: 20px;
 }</string>
-               </property>
-               <property name="value">
-                <number>24</number>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLabel" name="name_3">
-               <property name="text">
-                <string>Drive</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QProgressBar" name="drivebar">
-               <property name="styleSheet">
-                <string notr="true">QProgressBar {
-    border: 1px solid grey;
-    border-radius: 0px;
-}
-
-QProgressBar::chunk {
-    background-color: #919090;
-    width: 20px;
-}
-</string>
                </property>
                <property name="value">
                 <number>24</number>
